2006-07-02 [ticho]	0.5.0cvs7

	* src/rssyl_prefs.c
	* src/rssyl_prefs.h
		Actually add new source files. :)

2006-07-02 [ticho]	0.5.0cvs6

	* src/feed.c
	* src/feed.h
		Use less types of error messages.

2006-07-02 [ticho]	0.5.0cvs5

	* po/POTFILES.in
	* src/Makefile.am
	* src/feed.c
	* src/feed.h
	* src/feedprops.c
	* src/rssyl.c
	* src/rssyl.h
	* src/rssyl_gtk.c
		Added Common Preferences page for RSSyl.
		Configurable fetch timeout for feeds.
		Better error reporting to network log.
		Remove a leftover curltmpXXXXXX file on one more code path.

2006-06-26 [ticho]	0.5.0cvs4

	* src/parsers.c
	* src/rssyl_gtk.c
	Added "#39" -> "'" conversion (patch by Fabien Vantard).
	Changed the old item expiration logic when setting
	new expiration value a bit.

2006-06-18 [ticho]	0.5.0cvs3

	* src/feed.c
		If the feed doesn't have a main date tag, always update, regardless of
		its last modification time.

2006-06-18 [ticho]	0.5.0cvs2

	* src/parsers.c
		Replace HTML symbols in feed item titles.
	* src/strreplace.c
		Improved rssyl_strreplace() to calculate length of resulting string,
		and only allocate that amount, instead of fixed amount of 2048b.

2006-06-15 [paul]	0.5.0cvs1

	* configure.ac
		Fix pthread detection as the included
		config.h isn't SC's anymore
		Thanks to Colin

2006-06-12 [paul]	0.5.0

	0.5 released

2006-06-12 [paul]	0.4.0cvs20

	* po/Makefile.in.in
		fix autoconf warning

2006-06-12 [paul]	0.4.0cvs19

	* po/fr.po
		updated by Fabien Vantard

2006-06-06 [wwp]	0.4.0cvs18

	* configure.ac
	* src/.cvsignore
		fix/unify/simplify autostuff, don't ignore deprecated stuff.

2006-06-04 [ticho]	0.4.0cvs17

	* src/feedprops.c
	* src/rssyl_gtk.c
		Fix issue with storing/loading of feed refresh interval and expired
		items keep count.

2006-06-03 [ticho]	0.4.0cvs16

	* configure.ac
	* src/Makefile.am
	* src/feed.c
	* src/plugin.c
	* src/plugin_version.h.in
		Remove plugin_version.h{,.in}, as PLUGINVERSION macro is now provided
		in config.h.
