@@ -13,3 +13,4 @@
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/POTFILES.in;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/Makefile.am;  cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/feed.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/feed.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/feedprops.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/rssyl.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/rssyl.h;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/rssyl_gtk.c;  ) > 0.5.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/feed.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/feed.h;  ) > 0.5.0cvs6.patchset
 ( diff -u /dev/null src/rssyl_prefs.c;  diff -u /dev/null src/rssyl_prefs.h;  ) > 0.5.0cvs7.patchset
+( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 po/sk.po;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/feed.h;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/rssyl.h;  ) > 0.5.0cvs8.patchset
